Version 2.0 - 2018-04-13
* BUG#8545 Fix JSON Import
* OTH#0000 Fix batch parameters handling inherited from 1.12

Version 1.14 - 2017-11-09
* OTH#0000 Now, the batch parameter 'possible_days' stop the batch execution if empty or not given
* FEA#6898 Enhance batch which print automatically insurer reporting
* FEA#6360 Add batch to automatically print insurer reporting
* OTH#0000 Improve translations and report template invoice kinds
* FEA#6403 Enhance contract's invoices related fields performances

Version 1.12 - 2017-04-28
* FEA#0000 Add contract and option related fields

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23
* FEA#0000 Module creation