@@ -1,3 +1,6 @@
+* BUG#9143 Remplacement de report_commissions par insurer_reporting_lines pour améliorer les performances
+* BUG#9104 Ajout de modèles de courriers par défaut pour les bordereaux assureur / courtier
+
 Version 2.0 - 2018-04-13
 * BUG#8545 Correction de l'import JSON
 * OTH#0000 Correction de la gestion des paramétres de batch reportée depuis la 1.12
